<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_dark_blue">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="horizontal"
        android:background="@color/dark_blue">
        <Button
            android:id="@+id/button_ic_back_about"
            android:layout_width="@dimen/button_challenge_size"
            android:layout_height="@dimen/button_challenge_size"
            android:background="@drawable/ic_arrow_drawable"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="ABOUT"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_level"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/textview_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size_about"
        android:text="@string/developer"
        android:textColor="@android:color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size_about"
            android:text="@string/mail"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/tv_link_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_size_about"
            android:text="@string/link_gmail"
            android:textColor="@android:color/holo_red_light"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_how_to_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size_about"
        android:text="@string/how_to_play"/>


</LinearLayout>