<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_dark_blue">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="horizontal"
        android:background="@color/dark_blue">
        <Button
            android:id="@+id/button_ic_back_setting"
            android:layout_width="@dimen/button_challenge_size"
            android:layout_height="@dimen/button_challenge_size"
            android:background="@drawable/ic_arrow_drawable"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="SETTING"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_level"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_setting_opition_height"
        android:background="@color/dark_blue"
        android:layout_marginTop="@dimen/setting_option_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/setting_option_text_margin_left"/>
        <Switch
            android:id="@+id/switch_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/switch_swtting_margin_right"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_setting_opition_height"
        android:background="@color/dark_blue"
        android:layout_marginTop="@dimen/setting_option_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/setting_option_text_margin_left"/>
        <Button
            android:id="@+id/button_go_send_feedback"
            android:layout_width="@dimen/button_challenge_size"
            android:layout_height="@dimen/button_challenge_size"
            android:background="@drawable/ic_navigate_drawable"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/setting_option_text_margin_left"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_rate_the_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_setting_opition_height"
        android:background="@color/dark_blue"
        android:layout_marginTop="@dimen/setting_option_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_app"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/setting_option_text_margin_left"/>
        <Button
            android:id="@+id/button_go_rate_app"
            android:layout_width="@dimen/button_challenge_size"
            android:layout_height="@dimen/button_challenge_size"
            android:background="@drawable/ic_navigate_drawable"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/setting_option_text_margin_left"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_about_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_setting_opition_height"
        android:background="@color/dark_blue"
        android:layout_marginTop="@dimen/setting_option_margin_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/setting_option_text_margin_left"/>
        <Button
            android:id="@+id/button_go_about"
            android:layout_width="@dimen/button_challenge_size"
            android:layout_height="@dimen/button_challenge_size"
            android:background="@drawable/ic_navigate_drawable"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/setting_option_text_margin_left"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>